# backend/api/routes/rating_routes.go
@@ -11,7 +11,7 @@ func InitializeRatingRoutes(router *gin.RouterGroup) {
 	{
 		ratingGroup.POST("/create", middleware.RequireAuth, controllers.CreateRating)
 		ratingGroup.GET("/list", controllers.RatingList)
-		ratingGroup.GET("/recieved/:username", controllers.RecievedRattingList)
+		ratingGroup.GET("/received/:username", controllers.ReceivedRattingList)
 		ratingGroup.GET("/given/:username", controllers.GivenRattingList)
 	}
 }
